infer/tests/codetoanalyze/cpp/errors/reference/reference_struct_e2e.cpp
../../frontend/reference/reference_struct_e2e.cpp